--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -10,12 +10,15 @@ main .hero-container {
   
 main .hero {
   position: relative;
-  padding: 32px;
-  min-height: 300px;
+  padding: 0;
+  min-height: fit-content(100.06%);
+  height: max-content;
+  width: 100vw;
+  height: auto;
 }
 
 main .hero h1 {
-  max-width: 1200px;
+  min-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   color: white;
@@ -24,7 +27,7 @@ main .hero h1 {
 main .hero picture {
   position: absolute;
   z-index: -1;
-  top: 0;
+  top: var(--callout-height);
   left: 0;
   bottom: 0;
   right: 0;
@@ -32,8 +35,36 @@ main .hero picture {
   box-sizing: border-box;
 }
 
+main .hero video {
+  width: 100%;
+  height: auto;
+}
+
 main .hero img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+main .hero .bottom-callout, main .hero .top-callout {
+  background-color: var(--highlight-background-color);
+  height: 67px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+main .hero .bottom-callout {
+  display: table;
+}
+
+main .hero .top-callout {
+  position: fixed;
+  top: var(--nav-height);
+}
+
+main .hero .bottom-callout > div {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
