--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -23,18 +23,7 @@ main .hero h1 {
   color: white;
 }
 
-main .hero picture {
-  position: absolute;
-  z-index: -1;
-  top: var(--callout-height);
-  left: 0;
-  bottom: 0;
-  right: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
-
-main .hero video {
+main .hero video, main .hero picture {
   width: 100%;
   height: auto;
 }
