--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,31 +1,63 @@
 .cards > ul {
   list-style: none;
-  margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 16px;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  overflow-x: scroll;
+  flex-basis: 253px;
+  width: 1000px;
+  margin: auto;
 }
 
 .cards > ul > li {
-  border: 1px solid var(--highlight-background-color);
-  background-color: var(--background-color)
+  background-color: transparent;
+  min-width: 223px;
+  height:487px;
+  margin: 0 15px;
+}
+
+.cards > ul > li p {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: stb-light, sans-serif;
+  line-height: 24px;
+}
+
+.cards > ul > li h3 {
+  font-family: stb-s-bold, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
 }
 
 .cards .cards-card-body {
-  margin: 16px;
+  width: 253px;
+  margin: 15px 0;
 }
 
 .cards .cards-card-image {
   line-height: 0;
+  position: relative;
+  z-index: -1;
+}
+
+.cards .cards-card-image a.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 52px;
+  height: 52px;
 }
 
 .cards .cards-card-body > *:first-child {
   margin-top: 0;
 }
 
-.cards > ul > li img {
+.cards > ul > li picture > img {
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
+  border-bottom: 5px solid var(--highlight-background-color);
 }
