--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,10 @@
 
  :root {
   /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
+  --link-color: white;
+  --link-background-color: transparent;
+  --background-medium-dark: #F5F5F5;
+  --link-hover-color: white;
   --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #29403B;
@@ -165,28 +167,30 @@ a.button:any-link, button {
   display: inline-block;
   box-sizing: border-box;
   text-decoration: none;
-  border: 2px solid transparent;
   padding: 5px 30px;
   text-align: center;
   font-style: normal;
   font-weight: 600;
   cursor: pointer;
   color: var(--background-color);
-  background-color: var(--link-color);
+  border: 1px solid var(--background-color);
+  background-color: var(--link-background-color);
   margin: 16px 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border-radius: 30px;
 }
 
 a.button:hover, a.button:focus, button:hover, button:focus  {
   background-color: var(--link-hover-color);
+  color: var(--highlight-background-color);
   cursor: pointer;
 }
 
+
 button:disabled, button:disabled:hover {
   background-color: var(--overlay-background-color);
+  color: var(--highlight-background-color);
   cursor: unset;
 }
 
@@ -272,4 +276,53 @@ main .section.center {
 /* section metadata */
 main .section.highlight {
   background-color: var(--highlight-background-color);
+}
+
+main .lightbox {
+  width: 797px;
+  height: 450px;
+  background-color: var(--background-color);
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+main .lightbox iframe {
+  border: 0;
+  width: 100%;
+  height: 100%;
+}
+
+main .lightbox .close {
+  color: white;
+  position: absolute;
+  top:-30px;
+  right: -30px;
+  z-index: 4;
+  height: 35px;
+}
+
+main .modal {
+  position: fixed;
+  z-index: 2;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgba(0 0 0 / 10%);
+  outline-color: rgb(25 25 25);
+  backdrop-filter: blur(6px);
+  transition: opacity .15s linear;
+}
+
+main .hidden {
+  display: none;
+}
+
+.s7videoviewer .s7videoplayer {
+  background-color: transparent;
 }
