--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,8 @@
-.cards > ul {
+.cards {
+  position: relative;
+}
+
+.cards>ul {
   list-style: none;
   padding: 0;
   display: flex;
@@ -10,25 +14,73 @@
   margin: auto;
 }
 
-.cards > ul > li {
+.cards>ul>li {
   background-color: transparent;
   min-width: 223px;
-  height:487px;
+  height: 487px;
   margin: 0 15px;
 }
 
-.cards > ul > li p {
+.cards>ul>li p {
   font-size: 16px;
   font-weight: 400;
   font-family: stb-light, sans-serif;
   line-height: 24px;
+  max-width: 223px;
 }
 
-.cards > ul > li h3 {
+.cards>ul>li h3 {
   font-family: stb-s-bold, sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
+  max-width: 223px;
+}
+
+.cards button {
+  position: absolute;
+  top: 50%;
+  box-sizing: border-box;
+  color: #000;
+  text-decoration: none;
+  appearance: none;
+  border: none;
+  background-color: transparent;
+}
+
+.cards .next::before {
+  width: 30px;
+  height: 68px;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--highlight-background-color);
+  content: url("/icons/chevron-right.svg");
+}
+
+.cards .previous::before {
+  content: url("/icons/chevron-left.svg");
+    width: 30px;
+    height: 68px;
+    border-radius: 24px;
+    display: flex;
+    line-height: 24px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--highlight-background-color);
+}
+
+.cards .previous {
+  left: 80px;
+  transform: translateY(-50%) translateX(-100%);
+  font-family: "system" system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cards .next {
+  right: -80px;
+  transform: translateY(-50%) translateX(-100%);
+  font-family: "system" system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cards .cards-card-body {
@@ -51,11 +103,11 @@
   height: 52px;
 }
 
-.cards .cards-card-body > *:first-child {
+.cards .cards-card-body>*:first-child {
   margin-top: 0;
 }
 
-.cards > ul > li picture > img {
+.cards>ul>li picture>img {
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
